Tue 28 Nov 18:48:52 CET 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Terminology changes

Sat 25 Nov 22:05:19 CET 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation

Fri Nov 24 16:49:26 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-scansources.pl: Fix getopt usage since perl5.6 complains
    about it.
  * doc/deb-old.5,doc/deb.5,main/dpkg.8,scripts/dpkg-name.1,
    split/dpkg-split.8 : update to reflect that dpkg-deb is in section 1

Thu Nov 23 19:13:21 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * lib/myopt.c: properly chomp read lines

Thu Nov 23 17:52:44 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * lib/fields.c, lib/dump.c: fix two memory leaks
  * More Adam Heath patches:
    + lib/mlib.c, include/dpkg.h.in: add new option for do_fd_copy to
      specify buffersize
    + dpkg-deb/build.c, lib/info.c, lib/showcright.c: update for new
      do_fd_copy
    + dpkg-deb/extract.c: use do_fd_copy to read data instead of reading
      per character.
  * lib/mlib.c: fix error reporting for reading data in do_fd_copy
  * optlib/Makefile.am: remove (can't believe this still existed!)
  * utils/Makefile.in: link md5sum with our own libintl if needed
  * archtable, scripts/dpkg-architecture.pl: add freebsd-i386
  * acconfig.h, configure.in, doc/Makefile.in: make building documentation
    and start-stop-daemon optional
  * main/help.c: only check for start-stop-daemon in checkpatch() if we
    build it

Thu Nov 23 15:48:53 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-buildpackage.sh: Name .changes file properly if
    we are doing a source-only build

Thu Nov  9 13:53:21 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * doc/Makefile.in: use internals.html/index.html as dependency target
    so we only rebuild the docs when really needed

Wed Nov  8 14:55:48 CET 2000 Wichert Akkerman <wakkerma@debian.org>
