@@ -17,6 +17,12 @@ dpkg
 * try to remove directories again after removing conffiles
 * verify Enhances works (ie don't trigger some assertion)
 
+Fix:
+<joeyh_> package a conflicted with old versions of package b. package b
+      conficted with old versions of package a. I had the old versions of both
+      installed, and told dpkg to install the new versions of a and b
+      simulantaneously. It refused.
+
 dselect:
 * support Enhances (GNU/FSF)
 * toggle for searching through descriptions
