@@ -3,6 +3,8 @@ dpkg (1.8.0) unstable; urgency=low
   * Fix two memory leaks. Closes: Bug#74259
   * Fix some things perl5.6 complains about. Closes: Bug#77337
   * Fix referenes to dpkg-deb manpage. Closes: Bug#77855
+  * Add new --import option to dpkg-statoverride to make it easy to
+    import suidmanager settings.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
