@@ -1,3 +1,8 @@
+Thu Nov 30 02:45:42 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-statoverride.{pl,8}: add new --import option to
+    import settings from /etc/suid.conf
+
 Tue 28 Nov 18:48:52 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Terminology changes
